try to fix resources.html on mobile

--- a/resources.html
+++ b/resources.html
@@ -56,7 +56,7 @@
 						</header>
 						<div class="container special">
 							<article class="col-4 col-12-mobile special">
-							<a href="https://ethanbass.github.io/chromatographR/" class="image featured"><img src="images/chromatographR_logo.png" style="width:300px; float:right; padding-left: 50px" alt="chromatographR logo" /></a>
+							<a href="https://ethanbass.github.io/chromatographR/" class="image featured"><img src="images/chromatographR_logo.png" style="width:25%; float:right; padding-left: 5%" alt="chromatographR logo" /></a>
 								<header>
 									<p style="margin-right: 15em">
 									<br>
@@ -68,7 +68,7 @@
 							<div class="container special">
 							<article class="col-4 col-12-mobile special">
 								<header>
-								<a href="https://ethanbass.github.io/chromConverter/" class="image featured"><img src="images/chromConverter_logo.png" style="width:300px; float:right; padding-left: 50px" alt="" /></a>
+								<a href="https://ethanbass.github.io/chromConverter/" class="image featured"><img src="images/chromConverter_logo.png" style="width:25%; float:right; padding-left: 5%" alt="" /></a>
 									<p style="margin-right: 15em">
 									<br>
 									<a href="https://ethanbass.github.io/chromConverter/"> <strong> chromConverter </strong> </a> provides a set of parsers for reading binary chromatographic data into R. </p>
