--- a/resources.html
+++ b/resources.html
@@ -56,9 +56,9 @@
 						</header>
 						<div class="container special">
 							<article class="col-4 col-12-mobile special">
-							<a href="https://ethanbass.github.io/chromatographR/" class="image featured"><img src="images/chromatographR_logo.png" style="width:25%; float:right; padding-left: 5%" alt="chromatographR logo" /></a>
+							<a href="https://ethanbass.github.io/chromatographR/" class="image featured"><img src="images/chromatographR_logo.png" style="width:23vw; float:right; padding-left: 5vw" alt="chromatographR logo" /></a>
 								<header>
-									<p style="margin-right: 2%">
+									<p style="margin-right: 2vw">
 									<br>
 									<a href="https://ethanbass.github.io/chromatographR/"> <strong> chromatographR </strong> </a> provides a set of tools for reproducible processing and analysis of HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R.</p>
 								</header>
@@ -68,8 +68,8 @@
 							<div class="container special">
 							<article class="col-4 col-12-mobile special">
 								<header>
-								<a href="https://ethanbass.github.io/chromConverter/" class="image featured"><img src="images/chromConverter_logo.png" style="width:25%; float:right; padding-left: 5%" alt="" /></a>
-									<p style="margin-right: 2%">
+								<a href="https://ethanbass.github.io/chromConverter/" class="image featured"><img src="images/chromConverter_logo.png" style="width:23vw; float:right; padding-left: 5vw" alt="" /></a>
+									<p style="margin-right: 2vw">
 									<br>
 									<a href="https://ethanbass.github.io/chromConverter/"> <strong> chromConverter </strong> </a> provides a set of parsers for reading binary chromatographic data into R. </p>
 								</header>
