Revert "Update resources.html"
This reverts commit a27a3f2bebd24030b190cf683f28cea7e5448df6.

--- a/resources.html
+++ b/resources.html
@@ -60,7 +60,7 @@
 							<a href="https://ethanbass.github.io/chromatographR/" class="image featured"><img src="images/chromatographR_logo.png" style="width:26vw; float:right; padding-left: 5vw" alt="chromatographR logo" /></a>
 							</td>
 							<td>
-									<p style="margin-right: 1vw">
+									<p style="margin-right: 2vw">
 									<br>
 									<a href="https://ethanbass.github.io/chromatographR/"> <strong> chromatographR </strong> </a> provides a set of tools for reproducible processing and analysis of HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R.</p>
 								</td>
@@ -70,10 +70,10 @@
 						
 						<tr>
 						<td>
-						<a href="https://ethanbass.github.io/chromConverter/" class="image featured"><img src="images/chromConverter_logo.png" style="width:40ex; float:right; padding-left: 5vw" alt="" /></a>
+						<a href="https://ethanbass.github.io/chromConverter/" class="image featured"><img src="images/chromConverter_logo.png" style="width:26vw; float:right; padding-left: 5vw" alt="" /></a>
 						</td>
 						<td>
-									<p style="margin-right: 1vw">
+									<p style="margin-right: 2vw">
 									<br>
 									<a href="https://ethanbass.github.io/chromConverter/"> <strong> chromConverter </strong> </a> provides a set of parsers for reading binary chromatographic data into R. </p>
 							</td>
