--- a/resources.html
+++ b/resources.html
@@ -97,6 +97,11 @@
 									<a href="https://github.com/ethanbass/ShinyChromViewer"> <strong> ShinyChromViewer: </strong> Shiny Gadget for Interactive Viewing and Exploration of Chromatograms </a>.
 									</p>
 							<br>
+									<p style="margin-right: 40vw; margin-left: 2vw">
+									<br>
+									<a href="https://github.com/ethanbass/zerenebatchR"> <strong> zerenebatchR: </strong> Utility for Batch Processing Images in Zerene Stacker </a>.
+									</p>
+							<br>
 							<br>
 							<header>
 							<h3  style="margin-left: 2vw; text-align:left"> <strong>Maintainer </strong></h3>
