--- a/resources.html
+++ b/resources.html
@@ -102,6 +102,11 @@
 						<td>
 									<p style="margin-right: 40vw; margin-left: 2vw">
 									<br>
+									<a href="https://github.com/ethanbass/msdialreadr"> <strong> msdialreadr: </strong>  Read and Analyze MS-DIAL Alignment Files </a>.
+									</p>
+						<br>
+									<p style="margin-right: 40vw; margin-left: 2vw">
+									<br>
 									<a href="https://github.com/ethanbass/ShinyChromViewer"> <strong> ShinyChromViewer: </strong> Shiny Gadget for Interactive Viewing and Exploration of Chromatograms </a>.
 									</p>
 							<br>
