--- a/resources.html
+++ b/resources.html
@@ -102,8 +102,13 @@
 						<td>
 									<p style="margin-right: 40vw; margin-left: 2vw">
 									<br>
-									<a href="https://github.com/ethanbass/msdialreadr"> <strong> msdialreadr: </strong>  Read and Analyze MS-DIAL Alignment Files </a>.
+									<a href="https://ethanbass.github.io/ggtukey/"> <strong> ggtukey: </strong>  Compact Letter Displays for 'ggplot2' </a>.
 									</p>
+						<br>
+									<p style="margin-right: 40vw; margin-left: 2vw">
+									<br>
+									<a href="https://github.com/ethanbass/msdialreadr"> <strong> msdialreadr: </strong>  Read and Analyze MS-DIAL Alignment Files </a>.
+									</p>									
 						<br>
 									<p style="margin-right: 40vw; margin-left: 2vw">
 									<br>
