add mastodon link, add more software stuff

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="resources.html">Resources</a></li>
-
+						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Github</span></a></li>
@@ -67,6 +67,7 @@
 								<!-- Contact -->
 									<section class="contact">
 										<ul class="icons">
+						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Github</span></a></li>
