--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="resources.html">Resources</a></li>
-
+						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Github</span></a></li>
@@ -127,7 +127,18 @@
 									<p style="margin-right: 45vw; margin-left: 2vw">
 									I am also the current maintainer of the <a href="https://cran.r-project.org/web/packages/VPdtw/index.html"> <strong> VPdtw: </strong> Variable Penalty Dynamic Time Warping, </a> originally developed by <a href=https://scholar.google.com/citations?user=5fMDJAwAAAAJ&hl=en&oi=sra>David Clifford </a> and <a href=https://scholar.google.com/citations?user=I0wEvqAAAAAJ&hl=en&oi=sra> Glenn Stone </a>.
 									</p>
-									
+							<br>
+							<header>
+							<h3  style="margin-left: 2vw; text-align:left"> <strong>Contributor</strong></h3>
+							</header>
+									<p style="margin-right: 45vw; margin-left: 2vw">
+									I have also contributed code to several other open source software projects:  <br><br>
+										<a href="https://docs.ropensci.org/webchem/"> <strong> webchem: </strong> Chemical Information from the Web </a>
+										<br>
+										 <a href="https://github.com/wkumler/RaMS/"> <strong> RaMS: </strong> R-based access to Mass-Spectrometry data </a>
+										 <br>
+										 <a href="https://github.com/bovee/entab"> <strong> Entab: </strong>  * -> TSV </a>
+									</p>
 							</td>
 							</tr>
 							
@@ -140,6 +151,7 @@
 								<!-- Contact -->
 									<section class="contact">
 										<ul class="icons">
+						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Github</span></a></li>
