change section heading (resources -> software)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									</ul>
 								</li>
 								<li><a href="publications.html">Publications</a></li>
-								<li><a href="resources.html">Resources</a></li>
+								<li><a href="resources.html">Software</a></li>
 						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
