--- a/resources.html
+++ b/resources.html
@@ -28,7 +28,7 @@
 									</ul>
 								</li>
 								<li><a href="publications.html">Publications</a></li>
-								<li><a href="resources.html">Resources</a></li>
+								<li><a href="resources.html">Software</a></li>
 						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -51,7 +51,7 @@
 				<div class="wrapper style2">
 					<section id="resources" class="container special">
 						<header>
-							<h2  style="text-align:center; margin-right: 15vw">Resources</h2>
+							<h2  style="text-align:center; margin-right: 15vw">Software</h2>
 							<p style = "margin-right: 15vw; text-align:center; margin-left: 1vw">Some software tools I developed during my PhD to facilitate easier and more reproducible analysis of chemical data.</p>
 						</header>
 						<tr>
