renamed msdialreadr -> mzinspectr

--- a/resources.html
+++ b/resources.html
@@ -107,7 +107,7 @@
 						<br>
 									<p style="margin-right: 40vw; margin-left: 2vw">
 									<br>
-									<a href="https://github.com/ethanbass/msdialreadr"> <strong> msdialreadr: </strong>  Read and Analyze MS-DIAL Alignment Files </a>.
+									<a href="https://github.com/ethanbass/mzinspectr"> <strong> mzinspectr: </strong>  Read and Analyze MS-DIAL Alignment Files </a>.
 									</p>									
 						<br>
 									<p style="margin-right: 40vw; margin-left: 2vw">
