updated text on software page

--- a/resources.html
+++ b/resources.html
@@ -70,7 +70,7 @@
 						<a href="https://cran.r-project.org/package=chromatographR" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromatographR" alt="monthly downloads"></a> 
 						<!-- badges: end -->
 									<br> 
-									Provides a set of tools for reproducible processing and analysis of HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. 
+									Provides a set of tools for reproducible processing and analysis of HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. For an example workflow, see the <a href = https://ethanbass.github.io/chromatographR/articles/chromatographR.html class = "external-link"> vignette</a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
@@ -130,7 +130,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									This package provides a simple way to visualize paired comparisons by adding compact letter displays to 'ggplot2' figures.
+									This package provides a simple way to visualize paired comparisons by adding compact letter displays to 'ggplot2' figures. The example shows differences in body mass between penguin species, using data from the <a href = https://allisonhorst.github.io/palmerpenguins/ class = "external-link"> palmerpenguins </a> package. To get started, visit the <a href = https://ethanbass.github.io/ggtukey/articles/ggtukey.html class = "external-link"> vignette</a>.
 									</p>
 								</td>
 								<td style="vertical-align: top;">
@@ -151,7 +151,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									This is a utility I made in R to facilitate easier stacking of photos with Zerene Stacker. I use it mainly for stacking pictures of mycorrhizal hyphae and root structures to measure performance of mycorrhizae.
+									This is a utility I made in R to facilitate easier stacking of photos with <a href="https://www.zerenesystems.com/cms/stacker"> Zerene Stacker </a>. I use it mainly for stacking pictures of mycorrhizal hyphae (as shown in the image on the right) and root structures to measure the performance of mycorrhizae.
 									<br>
 									</p>
 								</td>
@@ -196,7 +196,7 @@
 									<a href="" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/VPdtw" alt="monthly downloads"></a> 
 									  <!-- badges: end -->
 									  <br>
-									I am also the current maintainer of the <a href="https://cran.r-project.org/web/packages/VPdtw/index.html"> <strong> VPdtw: </strong> Variable Penalty Dynamic Time Warping, </a> originally developed by <a href=https://scholar.google.com/citations?user=5fMDJAwAAAAJ&hl=en&oi=sra>David Clifford </a> and <a href=https://scholar.google.com/citations?user=I0wEvqAAAAAJ&hl=en&oi=sra> Glenn Stone </a>. I rescued this package from the CRAN archive and now use it in chromatographR for warping chromatograms.
+									I am also the current maintainer of the <a href="https://cran.r-project.org/web/packages/VPdtw/index.html"> <strong> VPdtw: </strong> Variable Penalty Dynamic Time Warping, </a> originally developed by <a href=https://scholar.google.com/citations?user=5fMDJAwAAAAJ&hl=en&oi=sra>David Clifford </a> and <a href=https://scholar.google.com/citations?user=I0wEvqAAAAAJ&hl=en&oi=sra> Glenn Stone </a>. I rescued this package from the CRAN archive and now use it as one of the options in <strong>chromatographR</strong> for aligning chromatograms.
 									</p>
 							<br>
 							<header>
