added github link for webchem

--- a/resources.html
+++ b/resources.html
@@ -151,7 +151,7 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									This is a utility I made in R to facilitate easier stacking of photos with <a href="https://www.zerenesystems.com/cms/stacker"> Zerene Stacker </a>. I use it mainly for stacking pictures of mycorrhizal hyphae (as shown in the image on the right) and root structures to measure the performance of mycorrhizae.
+									This is a utility I made in R to facilitate easier stacking of photos with <a href="https://www.zerenesystems.com/cms/stacker"> Zerene Stacker </a>. I use it mainly for stacking pictures of mycorrhizal hyphae (as pictured on the right) and root structures to measure the performance of mycorrhizae.
 									<br>
 									</p>
 								</td>
@@ -205,6 +205,7 @@
 									<p style="margin-right: 45vw; margin-left: 2vw">
 									I have also contributed code to several other open source software projects:  <br><br>
 										<a href="https://docs.ropensci.org/webchem/"> <strong> webchem: </strong> Chemical Information from the Web </a>
+										<a href="https://github.com/ropensci/webchem/" class="icon brands fa-github"><span class="label">Github</span></a>
 										<br>
 										 <a href="https://github.com/wkumler/RaMS/"> <strong> RaMS: </strong> R-based access to Mass-Spectrometry data </a>
 										 <br>
