--- a/index.html
+++ b/index.html
@@ -19,23 +19,16 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">About me</a></li>
-								<li>
-									<a href="research.html">Research</a>
-									<ul>
-										<li><a href="">Plant-soil feedbacks</a></li>
-										<li><a href="">Agricultural intercropping</a></li>
-										<li><a href="">Plant defense theory</a></li>
-									</ul>
-								</li>
+								<li><a href="research.html">Research</a></li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="resources.html">Software</a></li>
-						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Github</span></a></li>
-						<li><a href="https://www.researchgate.net/profile/Ethan-Bass-2/" class="icon brands fa-researchgate"><span class="label">Github</span></a></li>
-						<li><a href="mailto:eb565@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-
+								<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Orcid</span></a></li>
+								<li><a href="https://www.researchgate.net/profile/Ethan-Bass-2/" class="icon brands fa-researchgate"><span class="label">RG</span></a></li>
+								<li><a href="https://bsky.app/profile/ethanbass.bsky.social" class="icon solid fa-square"><span class="label">Bluesky</span></a></li>
+								<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+								<li><a href="mailto:eb565@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 
@@ -43,8 +36,6 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<header>
-					</header>
 				</section>
 			
 			<!-- Main -->
@@ -67,6 +58,7 @@
 								<!-- Contact -->
 									<section class="contact">
 										<ul class="icons">
+						<li><a href="https://bsky.app/profile/ethanbass.bsky.social" class="icon solid fa-square"><span class="label">Bluesky</span></a></li>
 						<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
