--- a/resources.html
+++ b/resources.html
@@ -19,6 +19,18 @@
         }
     	</style>
     -->
+    <style>
+        .smaller-hr {
+            border: none;
+            border-top: 4px solid gray; /* Adjust border-top to control the thickness of the line */
+            margin-bottom: 8vw; /* Adjust margin to control the space around the line */
+            margin-top: 0;
+            padding:0;
+        }
+        table {
+            margin-bottom: 0; /* Adjust margin-bottom to reduce space under the table */
+        }
+    </style>
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -176,12 +188,12 @@
 									</p>
 								</td>
 								<td style="vertical-align: top;">
-									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="image featured"><img src="images/shinyChromViewerUI_crop.png" style="width: 80%; margin-left: -5vw;" alt="" /></a>
+									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="image featured"><img src="images/shinyChromViewerUI_crop.png" style="width: 80%; margin-left: -5vw; margin-bottom:-8vw;" alt="" /></a>
 								</td>
 						</tr>
 					</table>
 							
-					<hr>
+					<hr class="smaller-hr">
 					
 							<header>
 							<h3  style="margin-left: 2vw; text-align:left"> <strong>Maintainer </strong></h3>
