--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,13 @@
             border-top: 0px solid black; /* Adjust border-top to control the thickness of the line */
             margin: 5px 0; /* Adjust margin to control the space around the line */
         }
+        .smaller-hr {
+            border: none;
+            border-top: 4px solid gray; /* Adjust border-top to control the thickness of the line */
+            margin-bottom: 8vw; /* Adjust margin to control the space around the line */
+            margin-top: -3vw;
+            padding:0;
+        }
     </style>
 	</head>
 	<body class="homepage is-preload">
@@ -75,7 +82,7 @@
 										
 										1. Jang S, Gornicki P, Marjanovic J, <b>Bass E</b>, Iurcotta TP, Rodriguez P, Austin J, Haselkorn R. Activity and structure of human acetyl-CoA carboxylase targeted by a specific inhibitor. FEBS Letters 592, no. 12 (2018): 2048–58. <a href="https://doi.org/10.1002/1873-3468.13097"> <em>https://doi.org/10.1002/1873-3468.13097</em></a>.
                                     </p>
-                                                      
+                         <hr class="smaller-hr">                             
 						<h3> Preprints </h3>
 						<hr class="bigger-hr">
 						<b>Bass E</b>, Mutyambai DM, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> <em>https://doi.org/10.21203/rs.3.rs-3641018/v1</em>.</a> (2023, <strong>in review </strong> at Journal of Chemical Ecology).
