--- a/resources.html
+++ b/resources.html
@@ -23,8 +23,8 @@
         .smaller-hr {
             border: none;
             border-top: 4px solid gray; /* Adjust border-top to control the thickness of the line */
-            margin-bottom: 8vw; /* Adjust margin to control the space around the line */
-            margin-top: 0;
+            margin-bottom: 9vw; /* Adjust margin to control the space around the line */
+            margin-top: -4.5vw;
             padding:0;
         }
         table {
@@ -188,7 +188,7 @@
 									</p>
 								</td>
 								<td style="vertical-align: top;">
-									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="image featured"><img src="images/shinyChromViewerUI_crop.png" style="width: 80%; margin-left: -5vw; margin-bottom:-8vw;" alt="" /></a>
+									<a href="https://github.com/ethanbass/ShinyChromViewer/" class="image featured"><img src="images/shinyChromViewerUI_crop.png" style="width: 80%; margin-left: -5vw; margin-bottom:-2vw;" alt="" /></a>
 								</td>
 						</tr>
 					</table>
@@ -210,7 +210,9 @@
 									  <br>
 									I am also the current maintainer of the <a href="https://cran.r-project.org/web/packages/VPdtw/index.html"> <strong> VPdtw: </strong> Variable Penalty Dynamic Time Warping, </a> originally developed by <a href=https://scholar.google.com/citations?user=5fMDJAwAAAAJ&hl=en&oi=sra>David Clifford </a> and <a href=https://scholar.google.com/citations?user=I0wEvqAAAAAJ&hl=en&oi=sra> Glenn Stone </a>. I rescued this package from the CRAN archive and now use it as one of the options in <strong>chromatographR</strong> for aligning chromatograms.
 									</p>
-							<br>
+							
+							<hr class="smaller-hr">
+							
 							<header>
 							<h3  style="margin-left: 2vw; text-align:left"> <strong>Contributor</strong></h3>
 							</header>
