--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
 					<section id="publications" class="container special">
 						<header>
 							<h2 >Publications</h2>
-							<h4> (For an updated list, you can also check my <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar page </a>)</h4>
+							<h5> (For an updated list of publications, you can also check my <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar page </a>)</h5>
 							<br>
 							
 							<h3 style="text-align:left"> Peer-reviewed publications </h3>
@@ -84,7 +84,7 @@
                          <hr class="smaller-hr">                             
 						<h3> Preprints </h3>
 						<hr class="bigger-hr">
-						<b>Bass E</b>, Mutyambai DM, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> <em>https://doi.org/10.21203/rs.3.rs-3641018/v1</em>.</a> (2023, <strong>in review </strong> at Journal of Chemical Ecology).
+						<b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> <em>https://doi.org/10.21203/rs.3.rs-3641018/v1</em>.</a> (2023, <strong>in review </strong> at Journal of Chemical Ecology).
 
 					</div>
 					</section>
