add short paragraph about software to index

--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
 					<section id="publications" class="container special">
 						<header>
 							<h2 >Publications</h2>
-							<h5> (For an updated list of publications, you can also check my <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar page </a>)</h5>
+							<h5> (Also see my <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar page </a> for an updated list)</h5>
 							<br>
 							
 							<h3 style="text-align:left"> Peer-reviewed publications </h3>
