--- a/resources.html
+++ b/resources.html
@@ -78,7 +78,7 @@
 						<a href="https://cran.r-project.org/package=chromatographR" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromatographR" alt="monthly downloads"></a> 
 						<!-- badges: end -->
 									<br> 
-									Provides a set of tools for reproducible processing and analysis of HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. For an example workflow, see the <a href = https://ethanbass.github.io/chromatographR/articles/chromatographR.html class = "external-link"> vignette</a>.
+									chromatographR provides a set of tools for flexibly and reproducibly analyzing HPLC-DAD data or other "simple" chromatographic data (e.g. HPLC-UV, GC-FID) in R. Includes functions for preprocessing, alignment, peak-finding and fitting, peak-table construction, data-visualization, etc. For an example workflow, see the <a href = https://ethanbass.github.io/chromatographR/articles/chromatographR.html class = "external-link"> vignette</a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
@@ -99,7 +99,7 @@
 									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromConverter" alt="monthly downloads"></a>
 									<!-- badges: end -->
 									<br>
-									Reads chromatograms from a variety of proprietary formats into R objects. Currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. Provides a simple programmatic interface to file parsers from external libraries, such as <a href="https://github.com/bovee/aston"> Aston  </a>, <a href = "https://github.com/bovee/entab"> Entab </a>, <a href = "https://www.openchrom.net/"> OpenChrom </a>, <a href="https://rainbow-api.readthedocs.io/"> rainbow </a> and the <a href = "https://github.com/compomics/ThermoRawFileParser"> ThermoRawFileParser </a>.
+									chromConverter reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston  </a>, <a href = "https://github.com/bovee/entab"> Entab </a>, <a href = "https://www.openchrom.net/"> OpenChrom </a>, <a href="https://rainbow-api.readthedocs.io/"> rainbow </a> and the <a href = "https://github.com/compomics/ThermoRawFileParser"> ThermoRawFileParser </a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
@@ -118,8 +118,8 @@
 									<a href="https://github.com/emersion/stability-badges#experimental" class="external-link"><img src="https://img.shields.io/badge/stability-experimental-orange.svg" alt="stability badge"></a> 
 									<!-- badges: end -->
 									<br>
-									A package for analyzing mass spectrometry alignments in R.
-									</p>		
+									There are many wonderful open source tools for analyzing mass spectrometry data like MS-DIAL and MZmine, however these tools are not as flexible as R for downstream statistical analyses of the resulting feature tables. Rather than re-inventing the wheel, I wanted a tool that could be used to flexibly analyze MS alignments in R. The mzinspectr package makes it easy to import feature tables from other programs for further processing and analysis in R. It includes functions for normalization, feature identification, and visualization of spectra.
+									</p>	
 								</td>
 								<td style="vertical-align: top;">
 									<a href="https://github.com/ethanbass/mzinspectr" class="image featured"><img src="images/mzinspectr_gadget_crop.png" style="margin-left: -5vw;" alt="" /></a>
