update navbar, add cv

--- a/resources.html
+++ b/resources.html
@@ -32,33 +32,33 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
+					<h1 class="site-title">Ethan Bass</h1>
 					<!-- Nav -->
-						<nav id="nav">
+						<nav class="navbar">
 							<ul>
-								<li><a href="index.html">About me</a></li>
-								<li><a href="publications.html">Publications</a></li>
-								<li><a href="resources.html">Software</a></li>
-								<li><a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Orcid</span></a></li>
-								<li><a href="https://www.researchgate.net/profile/Ethan-Bass-2/" class="icon brands fa-researchgate"><span class="label">RG</span></a></li>
-								<li><a href="https://bsky.app/profile/ethanbass.bsky.social" class="icon solid fa-square"><span class="label">Bluesky</span></a></li>
-								<li><a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-								<li><a href="mailto:eb565@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<div class="top-row">
+								<a href="index.html">About me</a>
+								<a href="publications.html">Publications</a>
+								<a href="resources.html">Software</a>
+								<a href="Bass_CV.pdf">CV</a>
+							</div>
+    						<div class="bottom-row">
+								<a href="https://github.com/ethanbass/" class="icon brands fa-github"><span class="label">Github</span></a>
+								<a href="https://orcid.org/0000-0002-6175-6739" class="icon brands fa-orcid"><span class="label">Orcid</span></a>
+								<a href="https://www.researchgate.net/profile/Ethan-Bass-2/" class="icon brands fa-researchgate"><span class="label">RG</span></a>
+								<a href="https://bsky.app/profile/ethanbass.bsky.social" class="icon solid fa-square"><span class="label">Bluesky</span></a>
+								<a href="https://twitter.com/Bass_E_" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+								<a href="https://ecoevo.social/@ethanbass" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a>
+								<a href="mailto:eb565@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
+							</div>
 							</ul>
 						</nav>
-
 				</div>
-
-			<!-- Banner -->
-				<section id="banner">
-					<header>
-					</header>
-				</section>
-			
-						<!-- Resources -->
+				
+				<!-- Resources -->
 				<div class="wrapper style2">
-					<section id="resources" class="container special">
+				<section id="resources" class="container special">
+						<br>
 						<header>
 							<h2  style="text-align:center; margin-right: 15vw">Software</h2>
 							<p style = "margin-right: 15vw; text-align:center; margin-left: 1vw">Some software tools I developed during my PhD to facilitate easier and more reproducible analysis of chemical data.</p>
