--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="page-wrapper">
 					<h1 class="site-title">Ethan Bass</h1>
 					<!-- Nav -->
-						<nav class="navbar">
+						<nav id="nav">
 							<ul>
 							<div class="top-row">
 								<a href="index.html">About me</a>
