--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
 
 					<h1 class="site-title">Ethan Bass</h1>
 					<!-- Nav -->
-						<nav class="navbar">
+						<nav id="nav">
 							<ul>
 							<div class="top-row">
 								<a href="index.html">About me</a>
@@ -61,7 +61,7 @@
 							<h2 >Publications</h2>
 							<br>
 							
-							<h3 style="text-align:left"> Peer-reviewed (also on <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar) </a> </h3> 
+							<h3 style="text-align:left"> Peer-reviewed (also see <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar) </a> </h3> 
 
 							
 						</header>
