--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
 
 					<h1 class="site-title">Ethan Bass</h1>
 					<!-- Nav -->
-						<nav class="navbar">
+						<nav id="nav">
 							<ul>
 							<div class="top-row">
 								<a href="index.html">About me</a>
