desmodium paper forthcoming

--- a/publications.html
+++ b/publications.html
@@ -84,12 +84,12 @@
 										1. Jang S, Gornicki P, Marjanovic J, <b>Bass E</b>, Iurcotta TP, Rodriguez P, Austin J, Haselkorn R. Activity and structure of human acetyl-CoA carboxylase targeted by a specific inhibitor. FEBS Letters 592, no. 12 (2018): 2048–58. <a href="https://doi.org/10.1002/1873-3468.13097"> https://doi.org/10.1002/1873-3468.13097</a>.
                                     </p>
 
-						<h3> Preprints and Submitted Papers</h3>
+						<h3> Preprints and Invited Articles</h3>
 						<hr class="bigger-hr">
-						<b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. 2023. <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> https://doi.org/10.21203/rs.3.rs-3641018/v1.</a> (<em>In review at Journal of Chemical Ecology</em>).
+						<b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. 2023. <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> https://doi.org/10.21203/rs.3.rs-3641018/v1.</a> (Forthcoming in <em>Journal of Chemical Ecology</em>).
 						<hr class="bigger-hr">
 						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. <br> 
-						(<em>Forthcoming in New Phytologist</em> — Commentary on <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
+						(Forthcoming in <em>New Phytologist</em> — Commentary on <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
 					</div>
 					</section>
 					</div>
