--- a/resources.html
+++ b/resources.html
@@ -99,7 +99,7 @@
 									<a href="https://cran.r-project.org/package=chromConverter" class="external-link"><img src="https://cranlogs.r-pkg.org/badges/last-month/chromConverter" alt="monthly downloads"></a>
 									<!-- badges: end -->
 									<br>
-									chromConverter reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston  </a>, <a href = "https://github.com/bovee/entab"> Entab </a>, <a href = "https://www.openchrom.net/"> OpenChrom </a>, <a href="https://rainbow-api.readthedocs.io/"> rainbow </a> and the <a href = "https://github.com/compomics/ThermoRawFileParser"> ThermoRawFileParser </a>.
+									chromConverter reads chromatograms from a variety of proprietary formats into R objects. It currently supports conversion of 'Agilent ChemStation', 'Agilent MassHunter', and 'ThermoRaw' files as well as various text-based formats. In addition to its internal file parsers, chromConverter provides a simple programmatic interface to file parsers from several external libraries, such as <a href="https://github.com/bovee/aston"> Aston</a>, <a href = "https://github.com/bovee/entab">Entab</a>, <a href = "https://www.openchrom.net/">OpenChrom</a>, <a href="https://rainbow-api.readthedocs.io/">rainbow</a>, and the <a href = "https://github.com/compomics/ThermoRawFileParser">ThermoRawFileParser</a>.
 									</p>
 								</td>
 								<td style=" vertical-align: top;">
