--- a/publications.html
+++ b/publications.html
@@ -86,9 +86,9 @@
 
 						<h3> Preprints and Invited Articles</h3>
 						<hr class="bigger-hr">
-						<b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. 2023. <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> https://doi.org/10.21203/rs.3.rs-3641018/v1.</a> (Forthcoming in <em>Journal of Chemical Ecology</em>).
+						<b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. Research Square (2023). <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> https://doi.org/10.21203/rs.3.rs-3641018/v1.</a> (Forthcoming in <em>Journal of Chemical Ecology</em>).
 						<hr class="bigger-hr">
-						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. <em>New Phytologist</em> (2023).  <a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a> (Commentary on Gfeller et al., 2023 — <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
+						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. <em>New Phytologist</em> (2024).  <a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a> (Commentary on Gfeller et al., 2023 — <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
 					</div>
 					</section>
 					</div>
