--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
 							<h2 >Publications</h2>
 							<br>
 							
-							<h3 style="text-align:left"> Peer-reviewed (also see my <a href="https://scholar.google.com/citations?user=Yvxlh1cAAAAJ&hl=en"> google scholar page) </a> </h3> 
+							<h3 style="text-align:left"> Peer-reviewed (also see my <a href="https://scholar.google.com/citations?hl=en&user=Yvxlh1cAAAAJ&view_op=list_works&sortby=pubdate"> google scholar page) </a> </h3> 
 
 							
 						</header>
