update desmodium paper

--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,10 @@
 						
 
 						<p style="text-align:left">
+										6. <b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. Journal of Chemical Ecology (2024). <a href="https://doi.org/10.1007/s10886-024-01470-5"> https://doi.org/10.1007/s10886-024-01470-5.</a> <br>
+										(<em>* indicates equal contribution</em>)</br>
+										<hr class="bigger-hr">
+
                                         5. <b>Bass E</b> and Kessler A. “Comment on ‘Information arms race explains plant-herbivore chemical communication in ecological communities.’” Peer Community Journal 2 (2022). <a href="https://doi.org/10.24072/pcjournal.102"> https://doi.org/10.24072/pcjournal.102.</a>
                                         <hr class="bigger-hr">
                                         
@@ -85,8 +89,6 @@
                                     </p>
 
 						<h3> Preprints and Invited Articles</h3>
-						<hr class="bigger-hr">
-						<b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. Research Square (2023). <a href="https://doi.org/10.21203/rs.3.rs-3641018/v1"> https://doi.org/10.21203/rs.3.rs-3641018/v1.</a> (Forthcoming in <em>Journal of Chemical Ecology</em>).
 						<hr class="bigger-hr">
 						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. <em>New Phytologist</em> (2024).  <a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a> (Commentary on Gfeller et al., 2023 — <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
 					</div>
