--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
 						
 
 						<p style="text-align:left">
-										6. <b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of Desmodium intercropping on maize resistance and secondary metabolism. Journal of Chemical Ecology (2024). <a href="https://doi.org/10.1007/s10886-024-01470-5"> https://doi.org/10.1007/s10886-024-01470-5.</a> <br>
+										6. <b>Bass E</b>*, Mutyambai DM*, Midega CAO, Khan ZR, Kessler A. Associational effects of <em>Desmodium</em> intercropping on maize resistance and secondary metabolism. Journal of Chemical Ecology (2024). <a href="https://doi.org/10.1007/s10886-024-01470-5"> https://doi.org/10.1007/s10886-024-01470-5.</a> <br>
 										(<em>* indicates equal contribution</em>)</br>
 										<hr class="bigger-hr">
 
@@ -90,7 +90,7 @@
 
 						<h3> Preprints and Invited Articles</h3>
 						<hr class="bigger-hr">
-						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. <em>New Phytologist</em> (2024).  <a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a> (Commentary on Gfeller et al., 2023 — <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
+						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. New Phytologist (2024).  <a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a>. (Commentary on Gfeller et al., 2023 — <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
 					</div>
 					</section>
 					</div>
