--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,8 @@
 
 						<h3> Preprints and Invited Articles</h3>
 						<hr class="bigger-hr">
-						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. New Phytologist (2024).  <a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a>. (Commentary on Gfeller et al., 2023 — <a href="https://doi.org/10.1111/nph.19401">https://doi.org/10.1111/nph.19401</a>).
+						<b>Bass E</b>. Getting to the root of divergent outcomes in the modulation of plant-soil feedbacks by benzoxazinoids. New Phytologist (2024).  <br>
+						<a href="https://doi.org/10.1111/nph.19545">https://doi.org/10.1111/nph.19545</a>. (Commentary on <a href="https://doi.org/10.1111/nph.19401">Gfeller et al., 2023</a>).
 					</div>
 					</section>
 					</div>
